--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.0"
   }
